fix bg on mobile

--- a/v2/styles.css
+++ b/v2/styles.css
@@ -43,6 +43,7 @@ html {
   height: 100%;
   overflow: hidden;
   -webkit-text-size-adjust: 100%;
+  background-color: var(--loader-bg);
 }
 
 body {
